Fixed dark mode

--- a/frontend/pages/globals.css
+++ b/frontend/pages/globals.css
@@ -2,14 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 @keyframes cursor-blink {
   0% {
     opacity: 0;
@@ -17,15 +9,15 @@
 }
 
 html {
+  color: black;
   height: 100%;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: white;
   height: 100%;
 }
 
 #__next {
   height: 100%;
+  width: 100%;
 }
